--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "scripts",
     "npm"
   ],
-  "devDependencies": {
+  "dependencies": {
     "bower-files": "^3.14.1",
     "concat": "^3.0.0",
     "cssmin": "^0.4.3",
